--- a/app_ios.json
+++ b/app_ios.json
@@ -39,8 +39,8 @@
         }
       }
     },
-	"facebookScheme": "fb1595919987201609",
-	"facebookAppId": "1595919987201609",
-	"facebookDisplayName": "Bóng việt"
+	"facebookScheme": "fb2166683270236145",
+	"facebookAppId": "2166683270236145",
+	"facebookDisplayName": "Bóng đá"
   }
 }
