thay đổi apikey và certificateHash theo slug mới
1.loginfb
	Bóng đá
	ID: 2166683270236145
	Secret key :3f30a0c5f3c294c9d2c31891673ebdee
	
2.login Google
	androidClientId: '732120503804-3fh7mat7v6aeuhrcf4180dlccsm0japr.apps.googleusercontent.com',
    iosClientId: '732120503804-3fh7mat7v6aeuhrcf4180dlccsm0japr.apps.googleusercontent.com',

3. Firebase
Apikey:AIzaSyDNwqJ2GQR49mZtS0yJvhzPLCekjA9LIE8
 
4. @bongviet/football
 
 Android
  
  exp fetch:android:keystore
  Keystore password: 0e09fe60aeea14e34055082f9980c79f
  Key alias:         QGJvbmd2aWV0L2Zvb3RiYWxs
  Key password:      292bc8b4114de47d105f6facbb2b2eda
  
  exp fetch:android:hashes
  Google Certificate Fingerprint:  A5:7A:6D:4A:30:EF:F8:75:6E:06:98:78:81:4B:68:F7:23:0D:F4:A1
  Google Certificate Hash:         A57A6D4A30EFF8756E069878814B68F7230DF4A1
  Facebook Key Hash:               pXptSjDv+HVuBph4gUto9yMN9KE=

--- a/app_android.json
+++ b/app_android.json
@@ -26,6 +26,7 @@
     "ios": {
       "supportsTablet": true,
       "bundleIdentifier": "com.thang.football"
+      
     },
     "android": {
       "package": "com.thang.football",
@@ -34,8 +35,15 @@
       ],
       "config": {
         "googleSignIn": {
+          /*
+           apiKey lấy từ link
+               https://console.cloud.google.com/apis/credentials?project=bongviet-156bf
+                name:bongviet apikey (khi xóa thay đổi apikey này apikey firebase sẽ thay đổi theo)
+           certificateHash
+           sẽ thay đổi theo slug khai báo file app.json
+          */
           "apiKey": "AIzaSyDNwqJ2GQR49mZtS0yJvhzPLCekjA9LIE8",
-          "certificateHash": "E8EDB32A81BE26EF586F1E6163AD1CFF20AAA0FE"
+          "certificateHash": "A57A6D4A30EFF8756E069878814B68F7230DF4A1"
         }
       }
     }
